--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "backend for buks chatapp",
   "main": "server.js",
   "scripts": {
-    "start": "SET NODE_ENV=dev && node server.js",
+    "start": "node server.js",
     "test": "mocha --timeout 100000 --exit"
   },
   "keywords": [
